--- a/everytime/lecture/Untitled.ipynb
+++ b/everytime/lecture/Untitled.ipynb
@@ -14,35 +14,11 @@
    "id": "4ff3769b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-12T19:19:16.928735Z",
-     "start_time": "2022-01-12T19:19:16.916054Z"
+     "end_time": "2022-01-13T11:15:03.737244Z",
+     "start_time": "2022-01-13T11:15:03.112254Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'rest'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [1]\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      8\u001B[0m os\u001B[38;5;241m.\u001B[39menviron\u001B[38;5;241m.\u001B[39msetdefault(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mDJANGO_SETTINGS_MODULE\u001B[39m\u001B[38;5;124m'\u001B[39m, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mrest.settings\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      9\u001B[0m os\u001B[38;5;241m.\u001B[39menviron[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mDJANGO_ALLOW_ASYNC_UNSAFE\u001B[39m\u001B[38;5;124m\"\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mtrue\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m---> 10\u001B[0m \u001B[43mdjango\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43msetup\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     12\u001B[0m \u001B[38;5;66;03m# Shell Plus Model Imports\u001B[39;00m\n\u001B[1;32m     13\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mboard\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mmodels\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m BestBoard, Board, HotBoard\n",
-      "File \u001B[0;32m~/Desktop/와플스튜디오/team5-server/everytime/venv/lib/python3.8/site-packages/django/__init__.py:19\u001B[0m, in \u001B[0;36msetup\u001B[0;34m(set_prefix)\u001B[0m\n\u001B[1;32m     16\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mdjango\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01murls\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m set_script_prefix\n\u001B[1;32m     17\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m \u001B[38;5;21;01mdjango\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mlog\u001B[39;00m \u001B[38;5;28;01mimport\u001B[39;00m configure_logging\n\u001B[0;32m---> 19\u001B[0m configure_logging(\u001B[43msettings\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mLOGGING_CONFIG\u001B[49m, settings\u001B[38;5;241m.\u001B[39mLOGGING)\n\u001B[1;32m     20\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m set_prefix:\n\u001B[1;32m     21\u001B[0m     set_script_prefix(\n\u001B[1;32m     22\u001B[0m         \u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/\u001B[39m\u001B[38;5;124m'\u001B[39m \u001B[38;5;28;01mif\u001B[39;00m settings\u001B[38;5;241m.\u001B[39mFORCE_SCRIPT_NAME \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m \u001B[38;5;28;01melse\u001B[39;00m settings\u001B[38;5;241m.\u001B[39mFORCE_SCRIPT_NAME\n\u001B[1;32m     23\u001B[0m     )\n",
-      "File \u001B[0;32m~/Desktop/와플스튜디오/team5-server/everytime/venv/lib/python3.8/site-packages/django/conf/__init__.py:82\u001B[0m, in \u001B[0;36mLazySettings.__getattr__\u001B[0;34m(self, name)\u001B[0m\n\u001B[1;32m     80\u001B[0m \u001B[38;5;124;03m\"\"\"Return the value of a setting and cache it in self.__dict__.\"\"\"\u001B[39;00m\n\u001B[1;32m     81\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_wrapped \u001B[38;5;129;01mis\u001B[39;00m empty:\n\u001B[0;32m---> 82\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_setup\u001B[49m\u001B[43m(\u001B[49m\u001B[43mname\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m     83\u001B[0m val \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mgetattr\u001B[39m(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_wrapped, name)\n\u001B[1;32m     85\u001B[0m \u001B[38;5;66;03m# Special case some settings which require further modification.\u001B[39;00m\n\u001B[1;32m     86\u001B[0m \u001B[38;5;66;03m# This is done here for performance reasons so the modified value is cached.\u001B[39;00m\n",
-      "File \u001B[0;32m~/Desktop/와플스튜디오/team5-server/everytime/venv/lib/python3.8/site-packages/django/conf/__init__.py:69\u001B[0m, in \u001B[0;36mLazySettings._setup\u001B[0;34m(self, name)\u001B[0m\n\u001B[1;32m     62\u001B[0m     desc \u001B[38;5;241m=\u001B[39m (\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124msetting \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m\"\u001B[39m \u001B[38;5;241m%\u001B[39m name) \u001B[38;5;28;01mif\u001B[39;00m name \u001B[38;5;28;01melse\u001B[39;00m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124msettings\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     63\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m ImproperlyConfigured(\n\u001B[1;32m     64\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mRequested \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m, but settings are not configured. \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     65\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mYou must either define the environment variable \u001B[39m\u001B[38;5;132;01m%s\u001B[39;00m\u001B[38;5;124m \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     66\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mor call settings.configure() before accessing settings.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m     67\u001B[0m         \u001B[38;5;241m%\u001B[39m (desc, ENVIRONMENT_VARIABLE))\n\u001B[0;32m---> 69\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_wrapped \u001B[38;5;241m=\u001B[39m \u001B[43mSettings\u001B[49m\u001B[43m(\u001B[49m\u001B[43msettings_module\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m~/Desktop/와플스튜디오/team5-server/everytime/venv/lib/python3.8/site-packages/django/conf/__init__.py:170\u001B[0m, in \u001B[0;36mSettings.__init__\u001B[0;34m(self, settings_module)\u001B[0m\n\u001B[1;32m    167\u001B[0m \u001B[38;5;66;03m# store the settings module in case someone later cares\u001B[39;00m\n\u001B[1;32m    168\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mSETTINGS_MODULE \u001B[38;5;241m=\u001B[39m settings_module\n\u001B[0;32m--> 170\u001B[0m mod \u001B[38;5;241m=\u001B[39m \u001B[43mimportlib\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mimport_module\u001B[49m\u001B[43m(\u001B[49m\u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mSETTINGS_MODULE\u001B[49m\u001B[43m)\u001B[49m\n\u001B[1;32m    172\u001B[0m tuple_settings \u001B[38;5;241m=\u001B[39m (\n\u001B[1;32m    173\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mINSTALLED_APPS\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m    174\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mTEMPLATE_DIRS\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m    175\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mLOCALE_PATHS\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[1;32m    176\u001B[0m )\n\u001B[1;32m    177\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_explicit_settings \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mset\u001B[39m()\n",
-      "File \u001B[0;32m/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.8/lib/python3.8/importlib/__init__.py:127\u001B[0m, in \u001B[0;36mimport_module\u001B[0;34m(name, package)\u001B[0m\n\u001B[1;32m    125\u001B[0m             \u001B[38;5;28;01mbreak\u001B[39;00m\n\u001B[1;32m    126\u001B[0m         level \u001B[38;5;241m+\u001B[39m\u001B[38;5;241m=\u001B[39m \u001B[38;5;241m1\u001B[39m\n\u001B[0;32m--> 127\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43m_bootstrap\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_gcd_import\u001B[49m\u001B[43m(\u001B[49m\u001B[43mname\u001B[49m\u001B[43m[\u001B[49m\u001B[43mlevel\u001B[49m\u001B[43m:\u001B[49m\u001B[43m]\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mpackage\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mlevel\u001B[49m\u001B[43m)\u001B[49m\n",
-      "File \u001B[0;32m<frozen importlib._bootstrap>:1014\u001B[0m, in \u001B[0;36m_gcd_import\u001B[0;34m(name, package, level)\u001B[0m\n",
-      "File \u001B[0;32m<frozen importlib._bootstrap>:991\u001B[0m, in \u001B[0;36m_find_and_load\u001B[0;34m(name, import_)\u001B[0m\n",
-      "File \u001B[0;32m<frozen importlib._bootstrap>:961\u001B[0m, in \u001B[0;36m_find_and_load_unlocked\u001B[0;34m(name, import_)\u001B[0m\n",
-      "File \u001B[0;32m<frozen importlib._bootstrap>:219\u001B[0m, in \u001B[0;36m_call_with_frames_removed\u001B[0;34m(f, *args, **kwds)\u001B[0m\n",
-      "File \u001B[0;32m<frozen importlib._bootstrap>:1014\u001B[0m, in \u001B[0;36m_gcd_import\u001B[0;34m(name, package, level)\u001B[0m\n",
-      "File \u001B[0;32m<frozen importlib._bootstrap>:991\u001B[0m, in \u001B[0;36m_find_and_load\u001B[0;34m(name, import_)\u001B[0m\n",
-      "File \u001B[0;32m<frozen importlib._bootstrap>:973\u001B[0m, in \u001B[0;36m_find_and_load_unlocked\u001B[0;34m(name, import_)\u001B[0m\n",
-      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'rest'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Change Directory to everytime base Folder\n",
     "import os\n",
@@ -98,8 +74,8 @@
    "id": "f2cce453-5a20-4117-b028-f6367c4914fc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-12T19:03:55.820481Z",
-     "start_time": "2022-01-12T19:03:55.798187Z"
+     "end_time": "2022-01-13T11:15:11.159004Z",
+     "start_time": "2022-01-13T11:15:11.141448Z"
     }
    },
    "outputs": [],
@@ -197,27 +173,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "17642b11",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-12T16:11:00.482326Z",
-     "start_time": "2022-01-12T16:11:00.248295Z"
+     "end_time": "2022-01-13T11:17:17.543977Z",
+     "start_time": "2022-01-13T11:17:17.273385Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Input \u001B[0;32mIn [3]\u001B[0m, in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[0;32m----> 1\u001B[0m lecturelist \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241m.\u001B[39mread_excel(\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m./수강편람.xls\u001B[39m\u001B[38;5;124m\"\u001B[39m, header\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m2\u001B[39m)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'pd' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "lecturelist = pd.read_excel(\"./수강편람.xls\", header=2)\n",
     "# lecturelist"
@@ -233,12 +197,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 10,
    "id": "60109179",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-12T19:36:46.442055Z",
-     "start_time": "2022-01-12T19:36:44.738706Z"
+     "end_time": "2022-01-13T11:21:58.524299Z",
+     "start_time": "2022-01-13T11:21:56.726998Z"
     }
    },
    "outputs": [
@@ -246,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "강의 수 : 8038\n"
+      "강의 수 : 7820\n"
      ]
     }
    ],
@@ -298,11 +262,19 @@
     "    \n",
     "    # 수업 교시 list로 변환\n",
     "    times = lecture.pop('times')\n",
+    "    location = lecture.pop('location')\n",
+    "    if times is not None and location is None:\n",
+    "        continue\n",
     "    if times is not None:\n",
-    "        times = [(time[0], int(time[2:4]+time[5:7]), int(time[8:10]+time[11:13])) for time in times.split('/')]\n",
-    "        lecture['times'] = times\n",
-    "    else:\n",
-    "        times = []\n",
+    "        times = times.split('/')\n",
+    "        location = location.split('/')\n",
+    "        if len(times) != len(location):\n",
+    "            print(\"장소와 시간 개수가 일치하지 않음!\")\n",
+    "            raise error\n",
+    "#         times = [(time[0], int(time[2:4]+time[5:7]), int(time[8:10]+time[11:13])) for time in times.split('/')]\n",
+    "#         lecture['times'] = times\n",
+    "#     else:\n",
+    "#         times = []\n",
     "    \n",
     "    # 개설학과가 None 이면 개설학과 = 개설대학\n",
     "    if lecture['department'] is None:\n",
@@ -367,6 +339,37 @@
     "    # lecturetime 오브젝트 생성\n",
     "    for time in times:\n",
     "        LectureTime.objects.create(lecture=lecture, day=time[0], start=time[1], end=time[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "672c4a82",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-13T11:27:06.631654Z",
+     "start_time": "2022-01-13T11:27:06.623072Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t\t('2022년 1학기', '2022년 1학기'),\n",
+      "\t\t('2021년 겨울학기', '2021년 겨울학기'),\n",
+      "\t\t('2021년 2학기', '2021년 2학기'),\n",
+      "\t\t('2021년 여름학기', '2021년 여름학기'),\n",
+      "\t\t('2021년 1학기', '2021년 1학기'),\n",
+      "\t\t('2020년 겨울학기', '2020년 겨울학기'),\n",
+      "\t\t('2020년 2학기', '2020년 2학기'),\n",
+      "\t\t('2020년 여름학기', '2020년 여름학기'),\n",
+      "\t\t('2020년 1학기', '2020년 1학기'),\n"
+     ]
+    }
+   ],
+   "source": [
+    "printTuple(['2022년 1학기', '2021년 겨울학기', '2021년 2학기', '2021년 여름학기', '2021년 1학기', '2020년 겨울학기', '2020년 2학기', '2020년 여름학기', '2020년 1학기'])"
    ]
   }
  ],
