성복이랑 합침

--- a/everytime/lecture/Untitled.ipynb
+++ b/everytime/lecture/Untitled.ipynb
@@ -70,12 +70,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "f2cce453-5a20-4117-b028-f6367c4914fc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T11:15:11.159004Z",
-     "start_time": "2022-01-13T11:15:11.141448Z"
+     "end_time": "2022-01-13T11:39:09.079424Z",
+     "start_time": "2022-01-13T11:39:09.061456Z"
     }
    },
    "outputs": [],
@@ -120,7 +120,7 @@
     "def reviseKey(lecture):\n",
     "    en_set = ['title', 'instructor', 'college', 'department', 'classification', \n",
     "              'degree', 'grade', 'course_code', 'lecture_code', 'credits', 'lecture', 'laboratory', \n",
-    "              'type', 'location', 'cart', 'quota', 'remark', 'language', 'times']\n",
+    "              'type', 'locations', 'cart', 'quota', 'remark', 'language', 'times']\n",
     "    kr_set = ['교과목명', '주담당교수', '개설대학', '개설학과', '교과구분', '이수과정', \n",
     "              '학년', '교과목번호', '강좌번호', '학점', '강의', '실습', \n",
     "              '수업형태', '강의실(동-호)(#연건, *평창)', '장바구니신청', '정원', '비고', '강의언어', '수업교시']\n",
@@ -173,12 +173,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "id": "17642b11",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T11:17:17.543977Z",
-     "start_time": "2022-01-13T11:17:17.273385Z"
+     "end_time": "2022-01-13T11:39:09.985538Z",
+     "start_time": "2022-01-13T11:39:09.738245Z"
     }
    },
    "outputs": [],
@@ -197,12 +197,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "60109179",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T11:21:58.524299Z",
-     "start_time": "2022-01-13T11:21:56.726998Z"
+     "end_time": "2022-01-13T11:39:12.472058Z",
+     "start_time": "2022-01-13T11:39:10.741630Z"
     }
    },
    "outputs": [
@@ -210,7 +210,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "강의 수 : 7820\n"
+      "강의 수 : 8038\n"
      ]
     }
    ],
@@ -262,19 +262,15 @@
     "    \n",
     "    # 수업 교시 list로 변환\n",
     "    times = lecture.pop('times')\n",
-    "    location = lecture.pop('location')\n",
-    "    if times is not None and location is None:\n",
-    "        continue\n",
+    "    locations = lecture.pop('locations')\n",
     "    if times is not None:\n",
-    "        times = times.split('/')\n",
-    "        location = location.split('/')\n",
-    "        if len(times) != len(location):\n",
-    "            print(\"장소와 시간 개수가 일치하지 않음!\")\n",
-    "            raise error\n",
-    "#         times = [(time[0], int(time[2:4]+time[5:7]), int(time[8:10]+time[11:13])) for time in times.split('/')]\n",
-    "#         lecture['times'] = times\n",
-    "#     else:\n",
-    "#         times = []\n",
+    "        times = [(time[0], int(time[2:4]+time[5:7]), int(time[8:10]+time[11:13])) for time in times.split('/')]\n",
+    "        lecture['times'] = times\n",
+    "        if locations is not None:\n",
+    "            locations = locations.split('/')\n",
+    "            lecture['locations'] = locations\n",
+    "    else:\n",
+    "        lecture['times'] = []\n",
     "    \n",
     "    # 개설학과가 None 이면 개설학과 = 개설대학\n",
     "    if lecture['department'] is None:\n",
@@ -344,7 +340,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "672c4a82",
+   "id": "89011cae",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-13T11:27:06.631654Z",
