수강편람 데이터 구현

--- a/everytime/lecture/Untitled.ipynb
+++ b/everytime/lecture/Untitled.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "id": "4ff3769b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T11:15:03.737244Z",
-     "start_time": "2022-01-13T11:15:03.112254Z"
+     "end_time": "2022-01-13T12:08:13.745464Z",
+     "start_time": "2022-01-13T12:08:13.732557Z"
     }
    },
    "outputs": [],
@@ -42,6 +42,7 @@
     "from post.models import Post, PostImage, PostTag, Tag, UserPost\n",
     "from rest_framework.authtoken.models import Token\n",
     "from user.models import SocialAccount, User\n",
+    "from lecture.models import *\n",
     "\n",
     "# Shell Plus Django Imports\n",
     "from django.core.cache import cache\n",
@@ -61,6 +62,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "e331e62a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2022-01-13T12:08:52.549933Z",
+     "start_time": "2022-01-13T12:08:52.546462Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "os.chdir('/Users/min-kyulee/Desktop/와플스튜디오/team5-server/everytime/lecture')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e86744fb-790e-4f33-bf8b-8d354f86c165",
    "metadata": {},
@@ -70,12 +86,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "f2cce453-5a20-4117-b028-f6367c4914fc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T11:39:09.079424Z",
-     "start_time": "2022-01-13T11:39:09.061456Z"
+     "end_time": "2022-01-13T12:08:11.792313Z",
+     "start_time": "2022-01-13T12:08:11.772646Z"
     }
    },
    "outputs": [],
@@ -132,7 +148,10 @@
     "    nanlist = []\n",
     "    for key, value in lecture.items():\n",
     "        if str(value) == 'nan':\n",
-    "            lecture[key] = None\n",
+    "            if key in ['instructor', 'type']:\n",
+    "                lecture[key] = ''\n",
+    "            else:\n",
+    "                lecture[key] = None\n",
     "            \n",
     "# 언어와 형태 비고에 포함\n",
     "def reviseRemark(lecture):\n",
@@ -173,17 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "id": "17642b11",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T11:39:09.985538Z",
-     "start_time": "2022-01-13T11:39:09.738245Z"
+     "end_time": "2022-01-13T12:08:55.993274Z",
+     "start_time": "2022-01-13T12:08:55.738697Z"
     }
    },
    "outputs": [],
    "source": [
-    "lecturelist = pd.read_excel(\"./수강편람.xls\", header=2)\n",
+    "lecturelist = pd.read_excel(\"수강편람.xls\", header=2)\n",
     "# lecturelist"
    ]
   },
@@ -197,12 +216,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "id": "60109179",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T11:39:12.472058Z",
-     "start_time": "2022-01-13T11:39:10.741630Z"
+     "end_time": "2022-01-13T12:13:03.097678Z",
+     "start_time": "2022-01-13T12:13:01.329204Z"
     }
    },
    "outputs": [
@@ -263,12 +282,16 @@
     "    # 수업 교시 list로 변환\n",
     "    times = lecture.pop('times')\n",
     "    locations = lecture.pop('locations')\n",
+    "    if locations is None:\n",
+    "        lecture['locations'] = []\n",
     "    if times is not None:\n",
     "        times = [(time[0], int(time[2:4]+time[5:7]), int(time[8:10]+time[11:13])) for time in times.split('/')]\n",
     "        lecture['times'] = times\n",
     "        if locations is not None:\n",
     "            locations = locations.split('/')\n",
     "            lecture['locations'] = locations\n",
+    "        else:\n",
+    "            lecture['locations'] = []\n",
     "    else:\n",
     "        lecture['times'] = []\n",
     "    \n",
@@ -291,81 +314,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
-   "id": "529ca8ee",
+   "execution_count": 21,
+   "id": "27e90e6c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-12T18:58:28.457650Z",
-     "start_time": "2022-01-12T18:58:28.453513Z"
-    }
+     "end_time": "2022-01-13T11:56:53.707862Z",
+     "start_time": "2022-01-13T11:56:53.702816Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('월', 1600, 1715), ('금', 1400, 1515)]"
+       "{'title': '건축환경계획',\n",
+       " 'instructor': '여명석',\n",
+       " 'college': '공과대학',\n",
+       " 'department': '건축학과',\n",
+       " 'classification': '전필',\n",
+       " 'degree': '학사',\n",
+       " 'grade': 2,\n",
+       " 'course_code': '4012.312A',\n",
+       " 'lecture_code': 1,\n",
+       " 'credits': 3,\n",
+       " 'lecture': 3,\n",
+       " 'laboratory': 0,\n",
+       " 'cart': 13,\n",
+       " 'quota': 70,\n",
+       " 'times': [('월', 930, 1045), ('수', 930, 1045)],\n",
+       " 'locations': ['39-409', '39-409']}"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "lectures[140]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "529ca8ee",
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2022-01-13T12:13:06.899Z"
+    }
+   },
+   "outputs": [],
+   "source": [
     "for lecture in lectures:\n",
     "    # college 오브젝트 생성\n",
     "    college = lecture.pop('college')\n",
-    "    college = College.objects.get_or_create(name=college)\n",
+    "    college, _ = College.objects.get_or_create(name=college)\n",
     "    \n",
     "    # department 오브젝트 생성\n",
-    "    dept = lecture.pop('college')\n",
-    "    dept = Department.objects.get_or_create(name=dept, college=college)\n",
+    "    dept = lecture.pop('department')\n",
+    "    dept, _= Department.objects.get_or_create(name=dept, college=college)\n",
     "        \n",
     "    # course 오브젝트 생성\n",
     "    course = {}\n",
     "    course['title'] = lecture.pop('title')\n",
     "    course['instructor'] = lecture.pop('instructor')\n",
-    "    course = Course.objects.get_or_create(**course)\n",
+    "    course['department'] = dept\n",
+    "    course, _ = Course.objects.get_or_create(**course)\n",
+    "    lecture['course'] = course\n",
+    "    \n",
+    "    # semester 오브젝트 생성\n",
+    "    semester = '2022년 1학기'\n",
+    "    semester, _ = Semester.objects.get_or_create(name=semester)\n",
+    "    lecture['semester'] = semester\n",
     "    \n",
     "    # lecture 오브젝트 생성\n",
     "    times = lecture.pop('times')\n",
-    "    lecture['semester'] = '2022년 1학기'\n",
-    "    Lecture.objects.create(**lecture)\n",
+    "    locations = lecture.pop('locations')\n",
+    "    lecture, _ = Lecture.objects.get_or_create(**lecture)\n",
     "    \n",
     "    # lecturetime 오브젝트 생성\n",
-    "    for time in times:\n",
-    "        LectureTime.objects.create(lecture=lecture, day=time[0], start=time[1], end=time[2])"
+    "    if len(locations) != 0:\n",
+    "        for time, location in zip(times, locations):\n",
+    "            LectureTime.objects.get_or_create(lecture=lecture, day=time[0], start=time[1], end=time[2], location=location)\n",
+    "    else:\n",
+    "        for time in times:\n",
+    "            LectureTime.objects.get_or_create(lecture=lecture, day=time[0], start=time[1], end=time[2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "89011cae",
+   "execution_count": 23,
+   "id": "f7a93d97",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T11:27:06.631654Z",
-     "start_time": "2022-01-13T11:27:06.623072Z"
+     "end_time": "2022-01-13T12:01:00.640562Z",
+     "start_time": "2022-01-13T12:01:00.635772Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\t\t('2022년 1학기', '2022년 1학기'),\n",
-      "\t\t('2021년 겨울학기', '2021년 겨울학기'),\n",
-      "\t\t('2021년 2학기', '2021년 2학기'),\n",
-      "\t\t('2021년 여름학기', '2021년 여름학기'),\n",
-      "\t\t('2021년 1학기', '2021년 1학기'),\n",
-      "\t\t('2020년 겨울학기', '2020년 겨울학기'),\n",
-      "\t\t('2020년 2학기', '2020년 2학기'),\n",
-      "\t\t('2020년 여름학기', '2020년 여름학기'),\n",
-      "\t\t('2020년 1학기', '2020년 1학기'),\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "printTuple(['2022년 1학기', '2021년 겨울학기', '2021년 2학기', '2021년 여름학기', '2021년 1학기', '2020년 겨울학기', '2020년 2학기', '2020년 여름학기', '2020년 1학기'])"
+    "times = lectures[140]['times']\n",
+    "locations = []\n",
+    "for time, location in zip(times, locations):\n",
+    "        print(time, location)"
    ]
   }
  ],
