8038개 강의 데이터베이스에 입력

--- a/everytime/lecture/Untitled.ipynb
+++ b/everytime/lecture/Untitled.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 1,
    "id": "4ff3769b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T12:08:13.745464Z",
-     "start_time": "2022-01-13T12:08:13.732557Z"
+     "end_time": "2022-01-13T13:41:30.823505Z",
+     "start_time": "2022-01-13T13:41:30.293494Z"
     }
    },
    "outputs": [],
@@ -57,23 +57,37 @@
     "# import Library\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import time\n",
+    "from tqdm import notebook\n",
     "\n",
     "os.chdir(cwd)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "e331e62a",
+   "execution_count": 2,
+   "id": "fc4dd7f0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T12:08:52.549933Z",
-     "start_time": "2022-01-13T12:08:52.546462Z"
+     "end_time": "2022-01-13T13:41:30.828592Z",
+     "start_time": "2022-01-13T13:41:30.824382Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/Users/min-kyulee/Desktop/와플스튜디오/team5-server/everytime/lecture'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "os.chdir('/Users/min-kyulee/Desktop/와플스튜디오/team5-server/everytime/lecture')"
+    "os.getcwd()\n",
+    "#os.chdir('/Users/min-kyulee/Desktop/와플스튜디오/team5-server/everytime/lecture')"
    ]
   },
   {
@@ -86,12 +100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "f2cce453-5a20-4117-b028-f6367c4914fc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T12:08:11.792313Z",
-     "start_time": "2022-01-13T12:08:11.772646Z"
+     "end_time": "2022-01-13T13:41:32.669771Z",
+     "start_time": "2022-01-13T13:41:32.615620Z"
     }
    },
    "outputs": [],
@@ -192,12 +206,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "17642b11",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T12:08:55.993274Z",
-     "start_time": "2022-01-13T12:08:55.738697Z"
+     "end_time": "2022-01-13T13:41:34.340281Z",
+     "start_time": "2022-01-13T13:41:34.099722Z"
     }
    },
    "outputs": [],
@@ -216,15 +230,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "60109179",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T12:13:03.097678Z",
-     "start_time": "2022-01-13T12:13:01.329204Z"
+     "end_time": "2022-01-13T13:41:37.106754Z",
+     "start_time": "2022-01-13T13:41:35.447352Z"
     }
    },
    "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ca88277fea0c41eb9cc7babd263690fa",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/8038 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -235,7 +263,7 @@
    ],
    "source": [
     "lectures = []\n",
-    "for i in range(len(lecturelist)):\n",
+    "for i in notebook.tqdm(range(len(lecturelist))):\n",
     "    '''\n",
     "    장바구니신청 -> 담은 인원\n",
     "    수업형태, 강의 언어 -> 비고에 포함\n",
@@ -314,71 +342,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "27e90e6c",
+   "execution_count": 6,
+   "id": "529ca8ee",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-01-13T11:56:53.707862Z",
-     "start_time": "2022-01-13T11:56:53.702816Z"
-    },
-    "scrolled": true
+     "end_time": "2022-01-13T13:55:15.478021Z",
+     "start_time": "2022-01-13T13:41:45.187721Z"
+    }
    },
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "88f3419e55404e098e41934d5e0d8297",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "{'title': '건축환경계획',\n",
-       " 'instructor': '여명석',\n",
-       " 'college': '공과대학',\n",
-       " 'department': '건축학과',\n",
-       " 'classification': '전필',\n",
-       " 'degree': '학사',\n",
-       " 'grade': 2,\n",
-       " 'course_code': '4012.312A',\n",
-       " 'lecture_code': 1,\n",
-       " 'credits': 3,\n",
-       " 'lecture': 3,\n",
-       " 'laboratory': 0,\n",
-       " 'cart': 13,\n",
-       " 'quota': 70,\n",
-       " 'times': [('월', 930, 1045), ('수', 930, 1045)],\n",
-       " 'locations': ['39-409', '39-409']}"
+       "  0%|          | 0/3038 [00:00<?, ?it/s]"
       ]
      },
-     "execution_count": 21,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "lectures[140]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "529ca8ee",
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2022-01-13T12:13:06.899Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "for lecture in lectures:\n",
-    "    # college 오브젝트 생성\n",
-    "    college = lecture.pop('college')\n",
-    "    college, _ = College.objects.get_or_create(name=college)\n",
+    "for lecture in notebook.tqdm(lectures[5000:]):\n",
     "    \n",
-    "    # department 오브젝트 생성\n",
-    "    dept = lecture.pop('department')\n",
-    "    dept, _= Department.objects.get_or_create(name=dept, college=college)\n",
-    "        \n",
-    "    # course 오브젝트 생성\n",
     "    course = {}\n",
     "    course['title'] = lecture.pop('title')\n",
     "    course['instructor'] = lecture.pop('instructor')\n",
-    "    course['department'] = dept\n",
+    "    \n",
+    "    # college, department 오브젝트 생성 (없으면 생성 안 함)\n",
+    "    college = lecture.pop('college')\n",
+    "    dept = lecture.pop('department')\n",
+    "    if college is not None:\n",
+    "        college, _ = College.objects.get_or_create(name=college)\n",
+    "        dept, _= Department.objects.get_or_create(name=dept, college=college)\n",
+    "        course['department'] = dept\n",
+    "\n",
+    "    # course 오브젝트 생성\n",
     "    course, _ = Course.objects.get_or_create(**course)\n",
     "    lecture['course'] = course\n",
     "    \n",
@@ -404,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f7a93d97",
+   "id": "8c2b49a0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-01-13T12:01:00.640562Z",
